--- a/.github/.golangci.yml
+++ b/.github/.golangci.yml
@@ -128,6 +128,9 @@ linters:
         - name: function-result-limit
           arguments:
             - 5
+        - name: struct-tag
+          arguments:
+            - "validate,persistence_custom_search_attributes"
         - name: unhandled-error
           arguments:
             - "fmt.*"
