--- a/.github/.golangci.yml
+++ b/.github/.golangci.yml
@@ -29,12 +29,13 @@ linters:
       disable:
         - fieldalignment
     forbidigo:
+      analyze-types: true
       forbid:
         - pattern: time.Sleep
           msg: "Please use require.Eventually or assert.Eventually instead unless you've no other option"
         - pattern: panic
           msg: "Please avoid using panic in application code"
-        - p: 'require\.Assertions'
+        - pattern: 'require\.Assertions'
           msg: "use require functions directly instead of require.Assertions"
     importas:
       # Enforce the aliases below.
