Add typos spell checker to linters
Add crate-ci/typos spell checker to the project for automatic spell checking:
- Add _typos.toml configuration in .github/ (next to golangci config)
- Exclude generated protobuf files (*.pb.go, *.proto, etc.)
- Add typos job to GitHub Actions linters workflow
- Add lint-typos and lint-typos-changed targets to Makefile
- lint-typos-changed checks only files changed from main (fast for local dev)
- Integrate lint-typos-changed into main lint target for faster local runs
- Document inline ignore directives and --file-list usage in config

The spell checker will run in CI on all files, while local make lint
will only check changed files for better performance.

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -133,6 +133,16 @@ jobs:
             exit 1
           fi
 
+  typos:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: check spelling with typos
+        uses: crate-ci/typos@v1.28.4
+        with:
+          config: .github/_typos.toml
+
   linters-succeed:
     name: All Linters Succeed
     needs:
@@ -141,6 +151,7 @@ jobs:
       - lint-actions
       - fmt-imports
       - golangci
+      - typos
     runs-on: ubuntu-latest
     if: always()
     env:
