--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -142,9 +142,11 @@ jobs:
 
       - name: Get changed files
         id: changed-files
+        env:
+          BASE_REF: ${{ github.base_ref }}
         run: |
-          git diff --name-only --diff-filter=ACMR origin/${{ github.base_ref }}...HEAD | tr '\n' ' ' > changed_files.txt
-          echo "files=$(cat changed_files.txt)" >> $GITHUB_OUTPUT
+          git diff --name-only --diff-filter=ACMR "origin/${BASE_REF}"...HEAD | tr '\n' ' ' > changed_files.txt
+          echo "files=$(cat changed_files.txt)" >> "$GITHUB_OUTPUT"
 
       - name: check spelling with typos on changed files
         if: steps.changed-files.outputs.files != ''
