Fix config tests and update development config
Update config tests to properly handle the new loading mechanism.
Fix sqlite file config to use correct path.

--- a/config/development-sqlite-file.yaml
+++ b/config/development-sqlite-file.yaml
@@ -105,7 +105,7 @@ clusterMetadata:
       initialFailoverVersion: 1
       rpcName: "frontend"
       rpcAddress: "localhost:7233"
-      httpAddres: "localhost:7243"
+      httpAddress: "localhost:7243"
 
 dcRedirectionPolicy:
   policy: "noop"
