using state transitions, allow breaking change in protobufs, move funcs to Callback

--- a/chasm/lib/buf.yaml
+++ b/chasm/lib/buf.yaml
@@ -7,6 +7,7 @@ breaking:
     - WIRE
   ignore:
     - chasm/lib/scheduler/proto/v1/message.proto
+    - chasm/lib/callback/proto/v1/tasks.proto
 lint:
   use:
     - DEFAULT
