Set explicit permissions for GitHub Actions workflows
This change was made by an automated process to ensure all GitHub Actions workflows have explicitly defined permissions as per best practices.

--- a/.github/workflows/check-release-dependencies.yml
+++ b/.github/workflows/check-release-dependencies.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - release/*
       - cloud/*
+permissions:
+  contents: read
 jobs:
   check-dependencies:
     runs-on: ubuntu-latest
