--- a/.github/workflows/check-pr-placeholders.yml
+++ b/.github/workflows/check-pr-placeholders.yml
@@ -1,4 +1,4 @@
-name: Validate PR description for placeholder lines or empty sections
+name: Validate PR description
 
 on:
   pull_request:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Validate PR description for placeholder lines or empty sections
+      - name: Validate PR description
         uses: actions/github-script@v7
         with:
           script: |
@@ -26,6 +26,15 @@ jobs:
             const lines = body.split(/\r?\n/);
 
             let violations = [];
+
+            // Detect HTML comments
+            const htmlCommentRegex = /<!--[\s\S]*?-->/g;
+            const htmlComments = body.match(htmlCommentRegex);
+            if (htmlComments) {
+              htmlComments.forEach((comment) => {
+                violations.push(`HTML comment detected: "${comment.substring(0, 50)}${comment.length > 50 ? '...' : ''}"`);
+              });
+            }
 
             // Detect placeholder lines: entire line starts and ends with _
             lines.forEach((line, idx) => {
@@ -53,7 +62,7 @@ jobs:
             if (violations.length > 0) {
               console.log("❌ PR description issues found:");
               violations.forEach(v => console.log(`- ${v}`));
-              core.setFailed(`PR description must not contain placeholders or empty sections.`);
+              core.setFailed(`PR description must not contain HTML comments, placeholders, or empty sections.`);
             } else {
               console.log("✅ PR description passed all checks.");
             }
