address pr comments

--- a/docker/config_template.yaml
+++ b/docker/config_template.yaml
@@ -1,3 +1,4 @@
+# TODO: Remove this file after temporalio/docker-builds repository is archived
 log:
     stdout: true
     level: {{ default .Env.LOG_LEVEL "info" }}
