--- a/common/config/config_template_embedded.yaml
+++ b/common/config/config_template_embedded.yaml
@@ -1,4 +1,5 @@
 # enable-template
+# TODO: Remove this file after temporalio/docker-builds repository is archived
 log:
     stdout: true
     level: {{ default .Env.LOG_LEVEL "info" }}
