--- a/chasm/lib/buf.yaml
+++ b/chasm/lib/buf.yaml
@@ -6,6 +6,7 @@ breaking:
   use:
     - WIRE
   ignore:
+    # TODO lina: remove after frontend handler PRs merge
     - chasm/lib/scheduler/proto/v1/message.proto
     # TODO seankane: remove after merging #8499
     - chasm/lib/callback/proto/v1/tasks.proto
