Add replay test for async wfs

--- a/config/dynamicconfig/development-sql.yaml
+++ b/config/dynamicconfig/development-sql.yaml
@@ -27,12 +27,19 @@
 #    constraints: {}
 #system.enableParentClosePolicyWorker:
 #  - value: true
+
+### Worker Versioning Replay Test configs
+### uncomment and set the right deploymentWorkflowVersion
+# matching.deploymentWorkflowVersion:
+#   - value: 1 # put the integer value of the workflow version you want to target (enum DeploymentWorkflowVersion)
 # matching.PollerHistoryTTL:
 #   - value: 1s
 # matching.wv.VersionDrainageStatusVisibilityGracePeriod:
 #   - value: 5s
 # matching.wv.VersionDrainageStatusRefreshInterval:
 #   - value: 5s
+### END of Worker Versioning Replay Test configs
+
 limit.maxIDLength:
   - value: 255
     constraints: {}
