swap to using go scripts and remove entrypoint ans start-temporal scripts

--- a/.github/docker/Makefile
+++ b/.github/docker/Makefile
@@ -1,16 +1,12 @@
-SERVER_VERSION ?= 1.29.1
 CLI_VERSION ?= 1.5.0
-TCTL_VERSION ?= 1.18.4
 IMAGE_REPO ?= temporaliotest
 TAG_LATEST ?= false
 
-TEMPORAL_SHA := $(shell git rev-parse HEAD)
+TEMPORAL_SHA ?= 07b75b062d194720bf65775e656942439f6b93a9
 IMAGE_SHA_TAG := $(shell git rev-parse --short HEAD)
 IMAGE_BRANCH_TAG := $(shell git rev-parse --abbrev-ref HEAD)
 
-BAKE_ENV := SERVER_VERSION=$(SERVER_VERSION) \
-	CLI_VERSION=$(CLI_VERSION) \
-	TCTL_VERSION=$(TCTL_VERSION) \
+BAKE_ENV := CLI_VERSION=$(CLI_VERSION) \
 	IMAGE_REPO=$(IMAGE_REPO) \
 	IMAGE_SHA_TAG=$(IMAGE_SHA_TAG) \
 	IMAGE_BRANCH_TAG=$(IMAGE_BRANCH_TAG) \
@@ -18,19 +14,22 @@ BAKE_ENV := SERVER_VERSION=$(SERVER_VERSION) \
 	TAG_LATEST=$(TAG_LATEST) \
 	ALPINE_IMAGE=$(ALPINE_IMAGE)
 
-.PHONY: build-tools
-build-admin-tools:
-	./build-from-source.sh $(CLI_VERSION) amd64 $(TEMPORAL_SHA)
-	./build-from-source.sh $(CLI_VERSION) arm64 $(TEMPORAL_SHA)
-	$(BAKE_ENV) docker buildx bake admin-tools
+.DEFAULT_GOAL := build-all
 
+.PHONY: build-all
+build-all: build-server build-admin-tools
+
+.PHONY: build-admin-tools
+build-admin-tools:
+	go run build-from-source.go --cli-version=$(CLI_VERSION) --arch=amd64 --temporal-sha=$(TEMPORAL_SHA)
+	go run build-from-source.go --cli-version=$(CLI_VERSION) --arch=arm64 --temporal-sha=$(TEMPORAL_SHA)
+	$(BAKE_ENV) docker buildx bake admin-tools
 
 .PHONY: build-server
 build-server:
-	./build-from-source.sh $(CLI_VERSION) amd64 $(TEMPORAL_SHA)
-	./build-from-source.sh $(CLI_VERSION) arm64 $(TEMPORAL_SHA)
+	go run build-from-source.go --cli-version=$(CLI_VERSION) --arch=amd64 --temporal-sha=$(TEMPORAL_SHA)
+	go run build-from-source.go --cli-version=$(CLI_VERSION) --arch=arm64 --temporal-sha=$(TEMPORAL_SHA)
 	$(BAKE_ENV) docker buildx bake server
-
 
 .PHONY: clean
 clean:
