strating point for new workflows
refactor promotion workflows

large refactor

correct features-integration

lint correction

goreleaser syntax fix

permissions, correct binary validation, remove pr-build.yaml not needed

reorg and fix a bug with re-org script

use fs instead of execSync

add getenv to bake file

fix arch bug

linux only build for features

simplify binary build and remove bad flag

simplify go releaser. use build in PR tests

fix docker load issue

fix docker context

fix scirpt location bug

change missed in previous commit

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,12 @@
+# GoReleaser v2 configuration
+version: 2
+
 before:
   hooks:
     - go mod download
+
+snapshot:
+  version_template: "{{ .Version }}-SNAPSHOT-{{ .ShortCommit }}"
 
 archives:
   - id: default
@@ -79,11 +85,11 @@ builds:
       - arm64
 
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
   algorithm: sha256
 
 changelog:
-  skip: true
+  disable: true
 
 announce:
-  skip: "true"
+  skip: true
