--- a/config/dynamicconfig/development-xdc.yaml
+++ b/config/dynamicconfig/development-xdc.yaml
@@ -47,3 +47,5 @@ history.enableTransitionHistory:
   - value: true
 history.EnableReplicationTaskTieredProcessing:
   - value: true
+history.enableChasm:
+  - value: true
