Revert "fix: make release dep check job always run on PRs (#8750)"
This reverts commit 8296ff4fedfa5c42274a70072721e08c05a4a9da.

--- a/.github/workflows/check-release-dependencies.yml
+++ b/.github/workflows/check-release-dependencies.yml
@@ -1,24 +1,16 @@
 name: Check Release Dependencies
 on:
-  pull_request: {}
-
-permissions:
-  contents: read
-
+  pull_request:
+    branches:
+      - release/*
+      - cloud/*
 jobs:
   check-dependencies:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
-        if: >-
-          startsWith('release/', github.event.pull_request.base.ref) ||
-          startsWith('cloud/', github.event.pull_request.base.ref)
-
+        uses: actions/checkout@v4
       - name: Check temporal dependencies use tagged versions
-        if: >-
-          startsWith('release/', github.event.pull_request.base.ref) ||
-          startsWith('cloud/', github.event.pull_request.base.ref)
         run: |
           echo "Checking that temporal dependencies use tagged versions..."
 
