--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -253,7 +253,7 @@ jobs:
 
       - name: Run unit tests
         timeout-minutes: 20
-        run: make unit-test-coverage
+        run: TEST_TIMEOUT=15m make unit-test-coverage
         env:
           UNIT_TEST_DIRS: ${{ inputs.unit_test_directory }}
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
