js scripts to go
ommited changes from last commit

fix dep warnings from goreleaser

add admin-tools for feature tests

add docker-compose to assets

fix lin issue

rm working-dir

try try again

try against features fix

try adding a ref

remove ref

missing branch tag

sha instead of branch

add debug workflow

change trigger

new commit

repo ref

update primary wf

use branch name and remove debug workflow

switch back to commit sha with some logging

update ref

update commit sha

commit update

add check for all cli tools in admin image

--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -1,5 +1,9 @@
 name: Build Docker Images
-description: Build Temporal Docker images from binaries
+description: |
+  Build Temporal Docker images from binaries.
+
+  Prerequisites:
+    - The build-binaries action must run before this action to produce the binaries.
 
 inputs:
   push:
@@ -28,30 +32,33 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Build docker-build-helper
+      shell: bash
+      working-directory: ${{ github.workspace }}/.github/actions/build-docker-images/scripts
+      run: |
+        go build -o docker-build-helper .
+
     - name: Validate and sanitize branch name for Docker tag
       id: sanitize-tag
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const sanitizeTag = require('./.github/actions/build-docker-images/scripts/sanitize-tag.js');
-          sanitizeTag({ context, core });
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run: |
+        .github/actions/build-docker-images/scripts/docker-build-helper sanitize-tag
 
     - name: Organize binaries for Docker
       id: organize-binaries
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const organizeBinaries = require('./.github/actions/build-docker-images/scripts/organize-binaries.js');
-          organizeBinaries({ core });
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run: |
+        .github/actions/build-docker-images/scripts/docker-build-helper organize-binaries
 
     - name: Download Temporal CLI
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const downloadCli = require('./.github/actions/build-docker-images/scripts/download-cli.js');
-          const availableArchsStr = '${{ steps.organize-binaries.outputs.available-archs }}';
-          const availableArchs = availableArchsStr.split(',');
-          downloadCli({ availableArchs });
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      env:
+        AVAILABLE_ARCHS: ${{ steps.organize-binaries.outputs.available-archs }}
+      run: |
+        .github/actions/build-docker-images/scripts/docker-build-helper download-cli
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -86,6 +93,33 @@ runs:
             -f docker/docker-bake.hcl \
             server admin-tools
         fi
+
+    - name: Verify admin-tools binaries
+      if: inputs.push != 'true' && inputs.load == 'true'
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      env:
+        IMAGE_REPO: temporaliotest
+        IMAGE_SHA_TAG: ${{ github.sha }}
+      run: |
+        echo "Verifying admin-tools binaries are present in the image..."
+        MISSING_TOOLS=""
+
+        for tool in temporal temporal-server temporal-cassandra-tool temporal-sql-tool temporal-elasticsearch-tool tdbg; do
+          if docker run --rm "${IMAGE_REPO}/admin-tools:${IMAGE_SHA_TAG}" sh -c "[ -x /usr/local/bin/${tool} ]"; then
+            echo "✓ ${tool} found and executable"
+          else
+            echo "✗ ${tool} is missing or not executable"
+            MISSING_TOOLS="${MISSING_TOOLS} ${tool}"
+          fi
+        done
+
+        if [ -n "${MISSING_TOOLS}" ]; then
+          echo "ERROR: The following tools are missing or not executable:${MISSING_TOOLS}"
+          exit 1
+        fi
+
+        echo "All admin tools verified successfully"
 
     - name: Build and push Docker images
       if: inputs.push == 'true'
