--- a/.github/workflows/features-integration.yml
+++ b/.github/workflows/features-integration.yml
@@ -55,7 +55,16 @@ jobs:
       - name: Save Docker image as artifact
         run: |
           docker save temporaliotest/server:${{ steps.image-tag.outputs.tag }} -o /tmp/temporal-server.tar
+          docker save temporaliotest/admin-tools:${{ steps.image-tag.outputs.tag }} -o /tmp/temporal-admin-tools.tar
           echo ${{ steps.image-tag.outputs.tag }} > /tmp/image_tag
+
+      - name: Prepare artifact
+        working-directory: ${{ github.workspace }}
+        run: |
+          # Upload-artifact has no good way to flatten paths, so we need to move the compose file
+          # to avoid some disgustingly long inner path inside the artifact zip.
+          cp ./develop/docker-compose/docker-compose.yml /tmp/docker-compose.yml
+          echo -n "${{env.IMAGE_SHA_TAG}}" > /tmp/image_sha_tag
 
       - name: Upload Docker artifact
         uses: actions/upload-artifact@v4
@@ -63,50 +72,58 @@ jobs:
           name: temporal-server-docker
           path: |
             /tmp/temporal-server.tar
+            /tmp/temporal-admin-tools.tar
             /tmp/image_tag
+            /tmp/docker-compose.yml 
+
           retention-days: 7
 
   feature-tests-ts:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/typescript.yaml@main
+    uses: temporalio/features/.github/workflows/typescript.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       # This field is not actually used by these workflow if docker-image-artifact-name
       # is set, but it's marked as required, so supply some string.
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-go:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/go.yaml@main
+    uses: temporalio/features/.github/workflows/go.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-python:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/python.yaml@main
+    uses: temporalio/features/.github/workflows/python.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-java:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/java.yaml@main
+    uses: temporalio/features/.github/workflows/java.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-dotnet:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/dotnet.yaml@main
+    uses: temporalio/features/.github/workflows/dotnet.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-status:
     name: Tests Status
