Add dynamic config to toggle standalone activity functionality

--- a/config/dynamicconfig/development-sql.yaml
+++ b/config/dynamicconfig/development-sql.yaml
@@ -73,3 +73,5 @@ history.enableTransitionHistory:
   - value: true
 history.enableChasm:
   - value: true
+activity.enableStandalone:
+  - value: true
