--- a/config/dynamicconfig/development-xdc.yaml
+++ b/config/dynamicconfig/development-xdc.yaml
@@ -49,3 +49,5 @@ history.EnableReplicationTaskTieredProcessing:
   - value: true
 history.enableChasm:
   - value: true
+activity.enableStandalone:
+  - value: true
