--- a/config/dynamicconfig/development-cass.yaml
+++ b/config/dynamicconfig/development-cass.yaml
@@ -57,3 +57,5 @@ history.enableTransitionHistory:
   - value: true
 history.enableChasm:
   - value: true
+activity.enableStandalone:
+  - value: true
