--- a/config/dynamicconfig/development-sql.yaml
+++ b/config/dynamicconfig/development-sql.yaml
@@ -75,3 +75,5 @@ history.enableTransitionHistory:
   - value: true
 history.enableChasm:
   - value: true
+activity.enableStandalone:
+  - value: true
