--- a/.github/workflows/features-integration.yml
+++ b/.github/workflows/features-integration.yml
@@ -24,45 +24,50 @@ jobs:
 
   feature-tests-ts:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/typescript.yaml@main
+    uses: temporalio/features/.github/workflows/typescript.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       # This field is not actually used by these workflow if docker-image-artifact-name
       # is set, but it's marked as required, so supply some string.
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-go:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/go.yaml@main
+    uses: temporalio/features/.github/workflows/go.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-python:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/python.yaml@main
+    uses: temporalio/features/.github/workflows/python.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-java:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/java.yaml@main
+    uses: temporalio/features/.github/workflows/java.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-dotnet:
     needs: build-docker-image
-    uses: temporalio/features/.github/workflows/dotnet.yaml@main
+    uses: temporalio/features/.github/workflows/dotnet.yaml@e831eef09886f7b39866a3d4c9476794ef27fe48
     with:
       version: __latest_features_docker_image__
       version-is-repo-ref: false
       docker-image-artifact-name: temporal-server-docker
+      features-repo-ref: e831eef09886f7b39866a3d4c9476794ef27fe48
 
   feature-tests-status:
     name: Tests Status
