--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: "Load image into local Docker daemon (only works with linux/amd64 - the runner architecture)"
     required: false
     default: "false"
+  cli-version:
+    description: "Temporal CLI version to download"
+    required: false
+    default: "1.5.1"
   dockerhub-username:
     description: "Docker Hub username"
     required: false
@@ -59,6 +63,7 @@ runs:
       working-directory: ${{ github.workspace }}
       env:
         AVAILABLE_ARCHS: ${{ steps.organize-binaries.outputs.available-archs }}
+        CLI_VERSION: ${{ inputs.cli-version }}
       run: |
         .github/actions/build-docker-images/scripts/docker-build-helper download-cli
 
