--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -26,6 +26,10 @@ inputs:
     description: "Temporal CLI version to download"
     required: false
     default: "1.5.1"
+  alpine-tag:
+    description: "Alpine base image tag with digest"
+    required: false
+    default: "3.23@sha256:c78ded0fee4493809c8ca71d4a6057a46237763d952fae15ea418f6d14137f2d"
   dockerhub-username:
     description: "Docker Hub username"
     required: false
@@ -87,6 +91,7 @@ runs:
         IMAGE_BRANCH_TAG: ${{ steps.sanitize-tag.outputs.tag }}
         TEMPORAL_SHA: ${{ github.sha }}
         TAG_LATEST: ${{ inputs.tag-latest }}
+        ALPINE_TAG: ${{ inputs.alpine-tag }}
       run: |
         if [ -n "${{ inputs.platform }}" ]; then
           docker buildx bake \
@@ -111,6 +116,7 @@ runs:
         IMAGE_BRANCH_TAG: ${{ steps.sanitize-tag.outputs.tag }}
         TEMPORAL_SHA: ${{ github.sha }}
         TAG_LATEST: ${{ inputs.tag-latest }}
+        ALPINE_TAG: ${{ inputs.alpine-tag }}
       run: |
         docker buildx bake \
           --push \
