--- a/.github/workflows/docker-build-manual.yml
+++ b/.github/workflows/docker-build-manual.yml
@@ -11,6 +11,10 @@ on:
         description: "Temporal CLI version to include in images"
         required: true
         default: "1.5.1"
+      alpine-tag:
+        description: "Alpine base image tag with digest (e.g., 3.23@sha256:...)"
+        required: true
+        default: "3.23@sha256:c78ded0fee4493809c8ca71d4a6057a46237763d952fae15ea418f6d14137f2d"
       push:
         description: "Push images to Docker Hub"
         required: true
@@ -69,6 +73,7 @@ jobs:
           tag-latest: ${{ inputs.tag-latest }}
           platform: ${{ inputs.platform }}
           cli-version: ${{ inputs.cli-version }}
+          alpine-tag: ${{ inputs.alpine-tag }}
           load: ${{ inputs.platform == 'linux/amd64' || inputs.platform == '' }}
 
       - name: Build and push Docker images
@@ -79,6 +84,7 @@ jobs:
           tag-latest: ${{ inputs.tag-latest }}
           platform: ${{ inputs.platform }}
           cli-version: ${{ inputs.cli-version }}
+          alpine-tag: ${{ inputs.alpine-tag }}
           dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
           dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
 
