Add a slack notification when main runs fail

--- a/.github/workflows/features-integration.yml
+++ b/.github/workflows/features-integration.yml
@@ -82,3 +82,38 @@ jobs:
           if [[ -n $(echo "$RESULTS" | jq '.[] | select (. != "success")') ]]; then
             exit 1
           fi
+
+  notify-failure:
+    name: Notify Slack on Failure
+    if: |
+      always() &&
+      github.ref == 'refs/heads/main' &&
+      needs.feature-tests-status.result == 'failure'
+    needs: feature-tests-status
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+          cache: true
+
+      - name: Build ci-notify tool
+        run: |
+          cd cmd/tools/ci-notify
+          go build -o /tmp/ci-notify .
+
+      - name: Send Slack notification
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          /tmp/ci-notify \
+            --run-id "${{ github.run_id }}" \
+            --slack-webhook "$SLACK_WEBHOOK"
