--- a/.github/workflows/promote-admin-tools-image.yml
+++ b/.github/workflows/promote-admin-tools-image.yml
@@ -19,190 +19,13 @@ permissions:
   contents: read
 
 jobs:
-  validate-inputs:
-    runs-on: ubuntu-latest
-    outputs:
-      source-tag-safe: ${{ steps.validate.outputs.source-tag }}
-      target-tags-safe: ${{ steps.validate.outputs.target-tags }}
-    steps:
-      - name: Validate input tags
-        id: validate
-        uses: actions/github-script@v8
-        env:
-          SOURCE_TAG: ${{ inputs.source-tag }}
-          TARGET_TAGS: ${{ inputs.target-tags }}
-        with:
-          script: |
-            const sourceTag = process.env.SOURCE_TAG;
-            const targetTagsInput = process.env.TARGET_TAGS;
-
-            // Source tag: must be short SHA (sha-XXXXXXX) or full sha256 digest
-            // Examples: sha-b5b2dfe, sha256:082943409e71ae50d8dd8693593070eac8173f01fb5bfd4970ae59e52176753e
-            const sourceTagPattern = /^sha-[a-f0-9]{7,}$|^sha256:[a-f0-9]{64}$/;
-
-            // Target tag: semantic version pattern (major.minor.patch.build or shorter)
-            // Examples: 1.29.1, 1.29.1.1, 1.29, latest
-            const targetTagPattern = /^(\d+\.)*\d+$|^latest$/;
-
-            // Validate source tag format
-            if (!sourceTagPattern.test(sourceTag)) {
-              core.setFailed('Error: Invalid source tag format. Must be sha-XXXXXXX or sha256:...');
-              return;
-            }
-
-            // Parse and validate target tags (split by newline or comma)
-            const targetTags = targetTagsInput
-              .split(/[\n,]/)
-              .map(tag => tag.trim())
-              .filter(tag => tag.length > 0);
-
-            if (targetTags.length === 0) {
-              core.setFailed('Error: At least one target tag must be provided');
-              return;
-            }
-
-            // Validate each target tag
-            for (const tag of targetTags) {
-              if (!targetTagPattern.test(tag)) {
-                core.setFailed(`Error: Invalid target tag format: "${tag}". Must be semantic version (e.g., 1.29.1, 1.29.1.1) or "latest"`);
-                return;
-              }
-            }
-
-            core.setOutput('source-tag', sourceTag);
-            core.setOutput('target-tags', JSON.stringify(targetTags));
-
-            // Log success
-            core.info('✓ Tag validation passed');
-            core.info(`  Source: ${sourceTag}`);
-            core.info(`  Target tags: ${targetTags.join(', ')}`);
-
-  scan-admin-tools-image:
-    needs: validate-inputs
-    runs-on: ubuntu-latest
-    outputs:
-      scan-result: ${{ steps.scan.outputs.scan-result }}
-      critical-count: ${{ steps.scan.outputs.critical-count }}
-      high-count: ${{ steps.scan.outputs.high-count }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-
-      - name: Pull source admin-tools image
-        env:
-          SOURCE_TAG: ${{ needs.validate-inputs.outputs.source-tag-safe }}
-        run: |
-          echo "Pulling temporaliotest/admin-tools:${SOURCE_TAG}"
-          docker pull "temporaliotest/admin-tools:${SOURCE_TAG}"
-
-      - name: Scan admin-tools image with Trivy
-        id: scan
-        uses: ./.github/actions/trivy-scan
-        with:
-          image-name: temporaliotest/admin-tools
-          image-tags: ${{ needs.validate-inputs.outputs.source-tag-safe }}
-
-      - name: Upload Trivy scan results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-admin-tools-scan-results
-          path: trivy-scan-admin-tools.json
-          retention-days: 30
-
-  check-security-gate:
-    needs: [scan-admin-tools-image]
-    runs-on: ubuntu-latest
-    outputs:
-      can-promote: ${{ steps.check.outputs.can-promote }}
-    steps:
-      - name: Evaluate security scan results
-        id: check
-        uses: actions/github-script@v8
-        env:
-          OVERRIDE: ${{ inputs.override-security-scan }}
-          SCAN_RESULT: ${{ needs.scan-admin-tools-image.outputs.scan-result }}
-          CRITICAL_COUNT: ${{ needs.scan-admin-tools-image.outputs.critical-count }}
-          HIGH_COUNT: ${{ needs.scan-admin-tools-image.outputs.high-count }}
-        with:
-          script: |
-            const override = process.env.OVERRIDE === 'true';
-            const scanResult = process.env.SCAN_RESULT;
-            const criticalCount = process.env.CRITICAL_COUNT;
-            const highCount = process.env.HIGH_COUNT;
-
-            core.info('=== Security Scan Results ===');
-            core.info(`Admin-tools image: ${scanResult}`);
-            core.info(`  Critical: ${criticalCount}`);
-            core.info(`  High: ${highCount}`);
-            core.info('');
-            core.info(`Override enabled: ${override}`);
-            core.info('==============================');
-
-            if (scanResult === 'fail') {
-              if (override) {
-                core.info('');
-                core.warning('Security vulnerabilities detected but OVERRIDE is enabled!');
-                core.info('Proceeding with image promotion despite security issues.');
-                core.setOutput('can-promote', 'true');
-              } else {
-                core.info('');
-                core.error('Security vulnerabilities detected. Promotion BLOCKED.');
-                core.info("To proceed anyway, re-run with 'override-security-scan' enabled.");
-                core.setOutput('can-promote', 'false');
-                core.setFailed('Security vulnerabilities detected');
-              }
-            } else {
-              core.info('');
-              core.info('✓ Security scan passed. Proceeding with promotion.');
-              core.setOutput('can-promote', 'true');
-            }
-
-  promote-admin-tools:
-    needs: [validate-inputs, check-security-gate]
-    if: needs.check-security-gate.outputs.can-promote == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Validate Docker Hub credentials
-        run: |
-          if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ] || [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
-            echo "Error: Docker Hub credentials not configured"
-            exit 1
-          fi
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Pull, tag, and push admin-tools image
-        uses: actions/github-script@v8
-        env:
-          SOURCE_TAG: ${{ needs.validate-inputs.outputs.source-tag-safe }}
-          TARGET_TAGS: ${{ needs.validate-inputs.outputs.target-tags-safe }}
-        with:
-          script: |
-            const { execSync } = require('child_process');
-            const sourceTag = process.env.SOURCE_TAG;
-            const targetTags = JSON.parse(process.env.TARGET_TAGS);
-
-            core.info('Promoting admin-tools image...');
-            core.info(`  From: temporaliotest/admin-tools:${sourceTag}`);
-            core.info(`  To: ${targetTags.map(t => `temporalio/admin-tools:${t}`).join(', ')}`);
-
-            // Pull from test registry
-            core.info('Pulling source image...');
-            execSync(`docker pull temporaliotest/admin-tools:${sourceTag}`, { stdio: 'inherit' });
-
-            // Tag for each target tag
-            for (const targetTag of targetTags) {
-              core.info(`Tagging as temporalio/admin-tools:${targetTag}`);
-              execSync(`docker tag temporaliotest/admin-tools:${sourceTag} temporalio/admin-tools:${targetTag}`, { stdio: 'inherit' });
-            }
-
-            // Push all tags at once
-            core.info('Pushing all tags to production registry...');
-            execSync(`docker push --all-tags temporalio/admin-tools`, { stdio: 'inherit' });
-
-            core.info('✓ Admin-tools image promoted successfully to all tags');
+  promote:
+    uses: ./.github/workflows/promote-docker-image.yml
+    with:
+      image-name: admin-tools
+      source-tag: ${{ inputs.source-tag }}
+      target-tags: ${{ inputs.target-tags }}
+      override-security-scan: ${{ inputs.override-security-scan }}
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
