--- a/config/dynamicconfig/development-sql.yaml
+++ b/config/dynamicconfig/development-sql.yaml
@@ -31,14 +31,14 @@
 ### Worker Versioning Replay Test configs
 ### uncomment and set the right deploymentWorkflowVersion
 #
-matching.deploymentWorkflowVersion:
- - value: 2 # put the integer value of the workflow version you want to target (enum DeploymentWorkflowVersion)
-matching.PollerHistoryTTL:
- - value: 1s
-matching.wv.VersionDrainageStatusVisibilityGracePeriod:
- - value: 5s
-matching.wv.VersionDrainageStatusRefreshInterval:
- - value: 5s
+#matching.deploymentWorkflowVersion:
+# - value: 2 # put the integer value of the workflow version you want to target (enum DeploymentWorkflowVersion)
+#matching.PollerHistoryTTL:
+# - value: 1s
+#matching.wv.VersionDrainageStatusVisibilityGracePeriod:
+# - value: 5s
+#matching.wv.VersionDrainageStatusRefreshInterval:
+# - value: 5s
 #
 ### END of Worker Versioning Replay Test configs
 
