fix qemu action error

--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -78,6 +78,9 @@ runs:
       run: |
         .github/actions/build-docker-images/scripts/docker-build-helper extract-version
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
