Add MongoDB persistence plugin for Temporal v1.30.0-148.2
This commit adds complete MongoDB support as a persistence layer for Temporal.

Features:
- Full MongoDB driver integration with connection pooling
- All persistence stores: execution, visibility, metadata, queue, shard, task
- Advanced visibility with MongoDB query converter
- Docker Compose setup for local development
- Prometheus monitoring integration
- Comprehensive test coverage
- Configuration examples and documentation

Technical Details:
- Compatible with Temporal v1.30.0-148.2 (Pre-release/Development)
- Uses official MongoDB Go driver
- Implements all required persistence interfaces
- Supports search attributes and custom queries
- Includes version-info-service workflow disabled (requires upstream secrets)

Files added:
- common/persistence/mongodb/* - MongoDB implementation
- config/development-mongodb.yaml - Configuration
- schema/mongodb/* - Database schemas
- docs/development/persistence/mongodb-*.md - Documentation
- Docker Compose and Prometheus configs

Note: This is based on v1.30.0 pre-release. For production use, see v1.29.2-mongodb.1 branch.

--- a/.github/workflows/trigger-publish.yml
+++ b/.github/workflows/trigger-publish.yml
@@ -1,12 +1,15 @@
+# DISABLED: This workflow requires upstream Temporal secrets (TEMPORAL_CICD_APP_ID)
+# We use docker-build-push.yml instead for our own Docker Hub publishing.
 name: 'Trigger Docker image build'
 
 on:
-  push:
-    branches:
-      - main
-      - cloud/*
-      - feature/*
-      - release/*
+  workflow_dispatch: # Disabled automatic trigger
+  # push:
+  #   branches:
+  #     - main
+  #     - cloud/*
+  #     - feature/*
+  #     - release/*
 
 jobs:
   trigger:
