--- a/.github/workflows/trigger-version-info-service.yml
+++ b/.github/workflows/trigger-version-info-service.yml
@@ -1,9 +1,12 @@
+# DISABLED: This workflow requires upstream Temporal secrets (TEMPORAL_CICD_APP_ID, TEMPORAL_CICD_PRIVATE_KEY)
+# that are not available in this fork. Re-enable if you have access to version-info-service repository.
 name: 'Trigger version-info-service release'
 
 on:
-  release:
-    types:
-      - published
+  workflow_dispatch: # Disabled automatic trigger, only manual
+  # release:
+  #   types:
+  #     - published
 
 jobs:
   trigger-vis:
