--- a/develop/docker-compose/docker-compose.yml
+++ b/develop/docker-compose/docker-compose.yml
@@ -35,6 +35,37 @@ services:
       POSTGRES_PASSWORD: temporal
     networks:
       - temporal-dev-network
+  mongo:
+    image: mongo:7.0.24
+    container_name: temporal-dev-mongodb
+    ports:
+      - "27017:27017"
+    entrypoint:
+      - "/bin/bash"
+      - "/mongodb-entrypoint.sh"
+    command:
+      - "mongod"
+      - "--replSet"
+      - "rs0"
+      - "--bind_ip_all"
+      - "--keyFile"
+      - "/data/configdb/mongo-keyfile"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: temporal
+      MONGO_INITDB_ROOT_PASSWORD: temporal
+    volumes:
+      - ./mongodb-entrypoint.sh:/mongodb-entrypoint.sh:ro
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          'mongosh --quiet --eval ''try { rs.status(); } catch (e) { if (e.codeName === "NotYetInitialized") { rs.initiate({ _id: "rs0", members: [{ _id: 0, host: "localhost:27017" }] }); } else { throw e; } } const hello = db.adminCommand({ hello: 1 }); if (hello.isWritablePrimary !== true) { quit(2); } db.adminCommand({ ping: 1 });'' || mongosh --quiet --username "$$MONGO_INITDB_ROOT_USERNAME" --password "$$MONGO_INITDB_ROOT_PASSWORD" --authenticationDatabase admin --eval ''try { rs.status(); } catch (e) { if (e.codeName === "NotYetInitialized") { rs.initiate({ _id: "rs0", members: [{ _id: 0, host: "localhost:27017" }] }); } else { throw e; } } const hello = db.adminCommand({ hello: 1 }); if (hello.isWritablePrimary !== true) { quit(2); } db.adminCommand({ ping: 1 });''',
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    networks:
+      - temporal-dev-network
   elasticsearch:
     image: elasticsearch:7.10.1
     container_name: temporal-dev-elasticsearch
