--- a/develop/github/docker-compose.yml
+++ b/develop/github/docker-compose.yml
@@ -64,3 +64,16 @@ services:
       - discovery.type=single-node
       - DISABLE_SECURITY_PLUGIN=true
       - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
+
+  mongodb:
+    image: mongo:7.0
+    ports:
+      - "27017:27017"
+    command: ["--replSet", "rs0", "--bind_ip_all"]
+    healthcheck:
+      test: |
+        mongosh --eval "try { rs.status().ok } catch(e) { rs.initiate({_id:'rs0',members:[{_id:0,host:'localhost:27017'}]}).ok }" --quiet
+      interval: 5s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
