--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,14 +1,16 @@
+# DISABLED: Fork doesn't need automatic test runs on every push
+# Re-enable for PR validation if needed
 name: All Tests
 run-name: ${{ inputs.test_name }}${{ inputs.test_dbs }}
 
 on:
-  pull_request:
-  push:
-    branches:
-      - main
-      - cloud/*
-      - feature/*
-      - release/*
+  # pull_request:
+  # push:
+  #   branches:
+  #     - main
+  #     - cloud/*
+  #     - feature/*
+  #     - release/*
 
   workflow_dispatch:
     inputs:
@@ -108,7 +110,7 @@ jobs:
           cat "$GITHUB_OUTPUT"
 
       - name: Checkout Code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -139,13 +141,13 @@ jobs:
     name: Pre-build for cache
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         with:
           go-version-file: "go.mod"
@@ -181,7 +183,7 @@ jobs:
     needs: pre-build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -189,7 +191,7 @@ jobs:
           # buf-breaking tries to compare HEAD against merge base so we need to be able to find it
           fetch-depth: 100
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         with:
           go-version-file: "go.mod"
@@ -229,12 +231,12 @@ jobs:
     needs: [pre-build, set-up-single-test]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: false # do our own caching
@@ -252,8 +254,8 @@ jobs:
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
       - name: Run unit tests
-        timeout-minutes: 20
-        run: TEST_TIMEOUT=15m make unit-test-coverage
+        timeout-minutes: 15
+        run: make unit-test-coverage
         env:
           UNIT_TEST_DIRS: ${{ inputs.unit_test_directory }}
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
@@ -261,8 +263,7 @@ jobs:
 
       - name: Generate crash report
         if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
+        run: | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
           [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
             CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
 
@@ -319,7 +320,7 @@ jobs:
     needs: [pre-build, set-up-single-test]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -334,7 +335,7 @@ jobs:
             postgresql
           down-flags: -v
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: false # do our own caching
@@ -357,8 +358,7 @@ jobs:
 
       - name: Generate crash report
         if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
+        run: | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
           [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
             CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
 
@@ -431,6 +431,7 @@ jobs:
           - mysql8
           - postgres12
           - postgres12_pgx
+          - mongodb
         shard_index: ${{ fromJson(needs.set-up-single-test.outputs.shard_indices) }}
         runs-on: ${{ fromJson(needs.set-up-single-test.outputs.runs_on) }}
         include:
@@ -468,6 +469,10 @@ jobs:
             persistence_type: sql
             persistence_driver: postgres12_pgx
             containers: [postgresql]
+          - name: mongodb
+            persistence_type: nosql
+            persistence_driver: mongodb
+            containers: [mongodb]
     runs-on: ${{ matrix.runs_on_override || matrix.runs-on }}
     env:
       TEST_TOTAL_SHARDS: ${{ needs.set-up-single-test.outputs.total_shards }}
@@ -481,7 +486,7 @@ jobs:
         with:
           key: docker-${{ runner.os }}${{ runner.arch }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
 
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -495,7 +500,7 @@ jobs:
           services: "${{ join(matrix.containers, '\n') }}"
           down-flags: -v
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: "go.mod"
@@ -512,9 +517,7 @@ jobs:
         with:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
-
       - name: Get job ID
-        if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         id: get_job_id
         uses: ./.github/actions/get-job-id
         with:
@@ -532,8 +535,7 @@ jobs:
 
       - name: Generate crash report
         if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
+        run: | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
           [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
             CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
 
@@ -604,7 +606,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        name: [cass_es, cass_es8, cass_os2, mysql8, postgres12, postgres12_pgx]
+        name: [cass_es, cass_es8, cass_os2, mysql8, postgres12, postgres12_pgx, mongodb]
         include:
           - name: cass_es
             persistence_type: nosql
@@ -639,13 +641,18 @@ jobs:
             persistence_driver: postgres12_pgx
             parallel_flags: "-parallel=2" # reduce parallelism for postgres
             containers: [postgresql]
+          - name: mongodb
+            persistence_type: nosql
+            persistence_driver: mongodb
+            parallel_flags: ""
+            containers: [mongodb]
     runs-on: ${{ matrix.runs_on_override || 'ubuntu-latest' }}
     env:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
       TEST_PARALLEL_FLAGS: ${{ matrix.parallel_flags }}
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -665,7 +672,7 @@ jobs:
           services: "${{ join(matrix.containers, '\n') }}"
           down-flags: -v
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: false # do our own caching
@@ -691,8 +698,7 @@ jobs:
 
       - name: Generate crash report
         if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
+        run: | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
           [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
             CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
 
@@ -769,6 +775,7 @@ jobs:
           - mysql8
           - postgres12
           - postgres12_pgx
+          - mongodb
         include:
           - name: cass_es
             persistence_type: nosql
@@ -800,13 +807,17 @@ jobs:
             persistence_type: sql
             persistence_driver: postgres12_pgx
             containers: [postgresql]
+          - name: mongodb
+            persistence_type: nosql
+            persistence_driver: mongodb
+            containers: [mongodb]
     runs-on: ${{ matrix.runs_on_override || 'ubuntu-latest' }}
     env:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
       ES_VERSION: ${{ matrix.es_version }}
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -826,7 +837,7 @@ jobs:
           services: "${{ join(matrix.containers, '\n') }}"
           down-flags: -v
 
-      - uses: actions/setup-go@v6
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: false # do our own caching
@@ -852,8 +863,7 @@ jobs:
 
       - name: Generate crash report
         if: failure()
-        run:
-          | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
+        run: | # if the tests failed, we would expect one JUnit XML report per attempt; otherwise it must have crashed
           [ "$(find .testoutput -maxdepth 1 -name 'junit.*.xml' | wc -l)" -lt "$MAX_TEST_ATTEMPTS" ] &&
             CRASH_REPORT_NAME="$GITHUB_JOB" make report-test-crash
 
@@ -949,7 +959,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
 
       - name: Send Slack notification
